--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <title>Raveesh's CV</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138932076-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-138932076-2');
+</script>
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <iframe src="https://docs.google.com/gview?url=https://github.com/iraveesh/cv/raw/master/1Pager_RaveeshMayya.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
